tests/fixtures/errors/invalid_family_decl_block_unclosed.puml
@startuml
class User {
  +id: UUID
@enduml
